<resources>
    <string name="app_name" translatable="false">芈展智慧园区</string>
    <string name="title_home" translatable="false">首页</string>
    <string name="title_park" translatable="false">园内服务</string>
    <string name="title_cloud" translatable="false">云服务</string>
    <string name="title_personal" translatable="false">个人中心</string>
    <string name="title_zhengcexinxi" translatable="false">最新政策</string>
    <string name="title_huodongxinxi" translatable="false">热门活动</string>
    <string name="title_gengduofuwu" translatable="false">------更多服务持续上线------</string>
    <string name="title_activity_parkservice" translatable="false">parkservice</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="personal_title_1" translatable="false">云服务申请服务</string>
    <string name="personal_title_2" translatable="false">园区服务申请记录</string>
    <string name="personal_title_3" translatable="false">管理我的车辆</string>
    <string name="personal_title_4" translatable="false">管理我的外卖地址</string>
    <string name="personal_title_5" translatable="false">成为企业用户</string>
    <string name="personal_tuichu" translatable="false">退出登陆</string>
    <string name="zuling" translatable="false">办公租赁</string>
    <string name="chuangye" translatable="false">创业服务</string>
    <string name="zhidao" translatable="false">创业指导</string>
    <string name="luyan" translatable="false">路演大会</string>
    <string name="shengqing" translatable="false">申请</string>
    <string name="chuangyeshenqing" translatable="false">创业服务申请</string>
    <string name="tijiao" translatable="false">提交</string>
    <string name="suozaiyuanqu" translatable="false">所在园区</string>
    <string name="bangongquyu" translatable="false">办公区域</string>
    <string name="gongsimingcheng" translatable="false">公司名称</string>
    <string name="lianxiren" translatable="false">联系人</string>
    <string name="lianxidianhua" translatable="false">联系电话</string>
    <string name="qingxuanzesuozaiyuanqu" translatable="false">请选择所在园区</string>
    <string name="qingxuanzebangongquyu" translatable="false">请输入办公区域</string>
    <string name="qingshurugongsimingcheng" translatable="false">请输入公司名称</string>
    <string name="qingshurulianxiren" translatable="false">请输入联系人</string>
    <string name="qingshulianxidianhua" translatable="false">请输入联系电话</string>
    <string name="mizhandashitang" translatable="false">芈展大食堂</string>
    <string name="menu_name" translatable="false">菜单</string>
    <string name="dish_name" translatable="false">菜名</string>
    <string name="shopcart" translatable="false">购物车</string>
    <string name="clear" translatable="false">清空</string>
    <string name="tijiaodingdan" translatable="false">提交订单</string>
    <string name="querendingdan" translatable="false">确认订单</string>
    <string name="teststring" translatable="false">XXX</string>
    <string name="teststring1" translatable="false">13888888888</string>
    <string name="textstring2" translatable="false">正在获取地址</string>
    <string name="dongdashijian" translatable="false">送达时间</string>
    <string name="zhifufangshi" translatable="false">支付方式</string>
    <string name="weixin" translatable="false">微信</string>
    <string name="beizhuxinxi" translatable="false">备注信息：</string>
    <string name="xuantian" translatable="false">(选填）</string>
    <string name="querenzhifu" translatable="false">确认支付</string>
    <string name="dizhiguanli" translatable="false">地址管理</string>
    <string name="jinrongfuwu" translatable="false">金融服务</string>
    <string name="fengxiantouzi" translatable="false">风险投资</string>
    <string name="yinhangdaikuan" translatable="false">银行贷款</string>
    <string name="jinrongfuwushenqing" translatable="false">金融服务申请</string>
    <string name="qingxuanzefuwu" translatable="false">请选择服务</string>
    <string name="shezhimorendizhi" translatable="false">设置为默认地址</string>
    <string name="bianji" translatable="false">编辑</string>
    <string name="tianjiadizhi" translatable="false">添加地址</string>
    <string name="xiangxidizhi" translatable="false">详细地址</string>
    <string name="chuangye_shengqing_title6" translatable="false">请输入详细地址</string>
    <string name="shi" translatable="false">是</string>
    <string name="fou" translatable="false">否</string>
    <string name="baocun" translatable="false">保存</string>
    <string name="mizhanfuwuyuanqu" translatable="false">芈展服务园区</string>
    <string name="dingdanzhuangtai" translatable="false">订单状态：</string>
    <string name="querensongda" translatable="false">确认送达</string>
    <string name="waimaijilu" translatable="false">外卖记录</string>
    <string name="renzhengqiyeyonghu" translatable="false">认证企业用户</string>
    <string name="qiyemingcheng" translatable="false">企业名称</string>
    <string name="farenxinming" translatable="false">法人姓名</string>
    <string name="lianxifangshi" translatable="false">联系方式</string>
    <string name="tongyixinyongdaimai" translatable="false">统一信用代码</string>
    <string name="shangchuanqiyezhengshu" translatable="false">上传企业证书</string>
    <string name="chuangye_shengqing_title7" translatable="false">请输入法人姓名</string>
    <string name="chuangye_shengqing_title8" translatable="false">请输入联系方式</string>
    <string name="chuangye_shengqing_title9" translatable="false">请输入统一信用代码</string>
    <string name="tingchejiaofei" translatable="false">停车缴费</string>
    <string name="cheliangpinpai" translatable="false">车辆品牌:</string>
    <string name="cheliangxinghao" translatable="false">车辆型号:</string>
    <string name="cheliangpaizhao" translatable="false">车辆牌照:</string>
    <string name="zuiguideyuekahuiyuan" translatable="false">尊贵的月卡会员</string>
    <string name="shengyutianshu" translatable="false">剩余天数</string>
    <string name="linshitingche" translatable="false">临时停车</string>
    <string name="tingcheceshu" translatable="false">停车次数</string>
    <string name="tianjiacheliang" translatable="false">添加车辆</string>
    <string name="tianjiaxincheliang" translatable="false">添加新车辆</string>
    <string name="qingshurucheliangpinpai" translatable="false">请输入车辆品牌</string>
    <string name="qingshurucheliangxinghao" translatable="false">请输入车辆型号</string>
    <string name="qingshurucheliangpaizhao" translatable="false">请输入车辆牌照</string>
    <string name="quxiao" translatable="false">取消</string>
    <string name="linshijiaofei" translatable="false">临时缴费</string>
    <string name="tingcheshijian" translatable="false">停车时间：</string>
    <string name="didashijian" translatable="false">抵达时间</string>
    <string name="zongzhifufeiyong" translatable="false">总支付费用</string>
    <string name="dangqianfeiyong" translatable="false">当前费用</string>
    <string name="tingcheshijiannoi" translatable="false">停车时间</string>
    <string name="chongzhiyueka" translatable="false">充值月卡</string>
    <string name="lijijiaofei" translatable="false">立即缴费</string>
    <string name="yixiaoshihouchongxinjifei" translatable="false">(一小时后重新计费)</string>
    <string name="yuekajiaofei" translatable="false">月卡缴费</string>
    <string name="yuekajiezhishijian" translatable="false">月卡截止时间</string>
    <string name="yuekaxufei" translatable="false">月卡续费</string>
    <string name="benyuenei" translatable="false">一月内</string>
    <string name="liangyuenei" translatable="false">二月内</string>
    <string name="sanyuenei" translatable="false">三月内</string>
    <string name="qiyefuwu" translatable="false">企业服务</string>
    <string name="gongshangzhuce" translatable="false">工商注册</string>
    <string name="wuyezixun" translatable="false">物业咨询</string>
    <string name="lijilianxi" translatable="false">立即联系</string>
    <string name="tousujianyi" translatable="false">投诉建议</string>
    <string name="tousuleixing" translatable="false">投诉类型</string>
    <string name="tousuduixiang" translatable="false">投诉对象</string>
    <string name="qingxuanzetousuleixing" translatable="false">请选择投诉类型</string>
    <string name="qingshurutousuduixiang" translatable="false">请输入投诉对象</string>
    <string name="wuyebaoxiu" translatable="false">物业报修</string>
    <string name="baoxiuleixing" translatable="false">报修类型</string>
    <string name="baoxiuduixiang" translatable="false">报修对象</string>
    <string name="qingxuanzebaoxiuleixing" translatable="false">请选择报修类型</string>
    <string name="qingshurubaoxiuduixiang" translatable="false">请输入报修对象</string>
    <string name="zhengfuzixun" translatable="false">政府咨询</string>
    <string name="lijishenqing" translatable="false">立即申请</string>
    <string name="zhengceshenqing" translatable="false">政策申请</string>
    <string name="zhengfuzhengce" translatable="false">政府政策</string>
    <string name="qingxuanzezhengfuzhengce" translatable="false">请选择政府政策</string>
    <string name="shenqingleixing" translatable="false">申请类型：</string>
    <string name="denglu" translatable="false">登录</string>
    <string name="zhuce" translatable="false">注册</string>
    <string name="qingshurushoujihao" translatable="false">请输入手机号码</string>
    <string name="qingshurumima" translatable="false">请输入密码</string>
    <string name="qingshuruyanzhengma" translatable="false">请输入验证码</string>
    <string name="huoquyanzhengma" translatable="false">获取验证码</string>
    <string name="tongshizhuceweiqiye" translatable="false">同时注册为企业</string>
    <string name="qingshuruyonghuming" translatable="false">请输入用户名</string>
    <string name="tousushenqing" translatable="false">投诉申请</string>
    <string name="baoxiushenqing" translatable="false">报修申请</string>
    <string name="caiwudaili" translatable="false">财务代理</string>
    <string name="shejiyinshua" translatable="false">设计印刷</string>
    <string name="zhishichanquan" translatable="false">知识产权</string>
    <string name="paizhao" translatable="false">拍照</string>
    <string name="xiangce" translatable="false">相册</string>
    <string name="wuyeString" translatable="false">Lorem ipsum dolor sit amet,consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et vivierra justo commodo.</string>
    <string name="shenqingneirong" translatable="false">申请内容</string>
    <string name="suoxuanfuwu" translatable="false">所选服务</string>
    <string name="lijibanli" translatable="false">立即办理</string>
    <string name="gerenxinxi" translatable="false">个人信息</string>
    <string name="shangchuantouxiang" translatable="false">上传头像</string>
    <string name="yonghuming" translatable="false">用户名</string>
    <string name="wodeqianming" translatable="false">我的签名</string>
    <string name="weixinzhifu" translatable="false">微信支付</string>
    <string name="zhifubaozhifu" translatable="false">支付宝支付</string>
    <string name="tingchejilu" translatable="false">停车记录</string>
    <string name="tiaoguo" translatable="false">跳过</string>
    <string name="shenqingshijian" translatable="false">申请时间</string>
    <string name="yuanqujieshao" translatable="false">园区介绍</string>
    <string name="guanliwodecheliang" translatable="false">管理我的车辆</string>
    <string name="yisongda" translatable="false">已送达</string>
    <string name="zhifubao" translatable="false">支付宝</string>
    <string name="queren" translatable="false">确认</string>
    <string name="dengdaizhifujieguo" translatable="false">等待支付结果</string>
    <string name="qiyezuling" translatable="false">企业租赁</string>
    <string name="chuangyefuwu" translatable="false">创业服务</string>
    <string name="weikaifang" translatable="false">(未开放)</string>
    <string name="changdiyuyue" translatable="false">场地预约</string>
    <string name="yuanneidiancan" translatable="false">园内点餐</string>
    <string name="yuanneifuwu" translatable="false">园内服务</string>
    <string name="zhengzaijiazai" translatable="false">正在加载</string>
</resources>
