<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".perkservice.parkservice_yuannei_baoxiu"
    android:orientation="vertical"
    android:background="@color/beijingf5f5f5">

    <Toolbar
        android:id="@+id/yuannei_baoxiu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="?attr/colorPrimary"
        android:title=""
        android:titleTextColor="@android:color/white"
        android:navigationIcon="@drawable/back_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wuyebaoxiu"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/personal_yuanjiaojuxingsuo"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/suozaiyuanqu"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bangongquyu"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gongsimingcheng"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/baoxiuleixing"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/baoxiuduixiang"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lianxiren"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lianxidianhua"
                android:textColor="#666666"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/baoxiu_yuanquxuanze_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/baoxiu_yuanquxuanze_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center_vertical"
                    android:text="@string/qingxuanzesuozaiyuanqu"
                    android:textColor="@color/d6d6d6"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/chuangye_chuangye_xia" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <EditText
                android:id="@+id/baoxiu_bangongquyu_textview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/qingxuanzebangongquyu"
                android:textColorHint="@color/d6d6d6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <EditText
                android:id="@+id/baoxiu_gongsimingcheng_textview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/qingshurugongsimingcheng"
                android:textColorHint="@color/d6d6d6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <LinearLayout
                android:id="@+id/baoxiu_baoxiuleixing_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/baoxiu_baoxiuleixing_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center_vertical"
                    android:text="@string/qingxuanzebaoxiuleixing"
                    android:textColor="@color/d6d6d6"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/chuangye_chuangye_xia" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <EditText
                android:id="@+id/baoxiu_baoxiuduixiang_textview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/qingshurubaoxiuduixiang"
                android:textColorHint="@color/d6d6d6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <EditText
                android:id="@+id/baoxiu_lianxiren_textview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/qingshurulianxiren"
                android:textColorHint="@color/d6d6d6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <EditText
                android:id="@+id/baoxiu_lianxidianhua_textview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/qingshulianxidianhua"
                android:textColorHint="@color/d6d6d6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/baoxiu_tijiao_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/personal_yuanjiaojuxingsuoblue"
        android:text="@string/tijiao"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

</LinearLayout>