<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".personal.renzhengqiye"
    android:background="@color/beijingf5f5f5">

    <Toolbar
        android:id="@+id/personal_renzhengqiye_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="?attr/colorPrimary"
        android:navigationIcon="@drawable/back_button"
        android:title=""
        android:titleTextColor="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/renzhengqiyeyonghu"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/personal_yuanjiaojuxingsuo">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/qiyemingcheng"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/farenxinming"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lianxifangshi"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tongyixinyongdaimai"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/shangchuanqiyezhengshu"
                android:textColor="#666666"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">


            <EditText
                android:id="@+id/personal_renzheng_qiyemingcheng_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/qingshurugongsimingcheng"
                android:textColorHint="@color/d6d6d6"
                android:textSize="15sp"
                android:singleLine="true"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <EditText
                android:id="@+id/personal_renzheng_xingming_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/chuangye_shengqing_title7"
                android:textColorHint="@color/d6d6d6"
                android:textSize="15sp"
                android:singleLine="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <EditText
                android:id="@+id/personal_renzheng_lianxifangshi_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/chuangye_shengqing_title8"
                android:textColorHint="@color/d6d6d6"
                android:textSize="15sp"
                android:singleLine="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <EditText
                android:id="@+id/personal_renzheng_xinyongdaima_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/chuangye_shengqing_title9"
                android:textColorHint="@color/d6d6d6"
                android:textSize="15sp"
                android:singleLine="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dddddd" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <ImageView
                    android:id="@+id/personal_renzheng_upimgview"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/personal_renzhengqiye_imageview" />
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/personal_renzheng_tijiao_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/personal_yuanjiaojuxingsuoblue"
        android:text="@string/tijiao"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


</LinearLayout>